CProgrammierung/eval_pipline/resources/testcases/bad/fail_multiple_edges.stdin
dspex431dfysdiazvcmf:n3vawh54817oe,xps2zz9trz9z,wpre4djhgz,i88a1rph-727
n3vawh54817oe:wpre4djhgz,s73aw0gvw,xps2zz9trz9z
wpre4djhgz:xps2zz9trz9z
i88a1rph:wpre4djhgz,n3vawh54817oe,s73aw0gvw,xps2zz9trz9z
a6llz3us:i88a1rph,s73aw0gvw,dspex431dfysdiazvcmf,n3vawh54817oe,wpre4djhgz,c84ye4s68nde
s73aw0gvw:wpre4djhgz
c84ye4s68nde:s73aw0gvw,wpre4djhgz,i88a1rph,gvsnxkqtb2uwd3pmc,qiib2qvut3
4hum6:c84ye4s68nde,6k7vr1umbb2lt,i88a1rph,a6llz3us,s73aw0gvw,gvsnxkqtb2uwd3pmc,qiib2qvut3
6k7vr1umbb2lt:gvsnxkqtb2uwd3pmc,a6llz3us,s73aw0gvw,c84ye4s68nde,qiib2qvut3
gvsnxkqtb2uwd3pmc:qiib2qvut3,s73aw0gvw-117
0qsrkqf5dq:qiib2qvut3,3ozkwbsv,4hum6,6k7vr1umbb2lt,gvsnxkqtb2uwd3pmc,c7uymh92utuioymo,oial9f2kf5,969u319
3ozkwbsv:c7uymh92utuioymo,6k7vr1umbb2lt,gvsnxkqtb2uwd3pmc,qiib2qvut3,oial9f2kf5,969u319,szyor08zefvhm
c7uymh92utuioymo:oial9f2kf5,gvsnxkqtb2uwd3pmc,qiib2qvut3,szyor08zefvhm
oial9f2kf5:qiib2qvut3,szyor08zefvhm,szyor08zefvhm
969u319:oial9f2kf5,szyor08zefvhm,c7uymh92utuioymo,sotmx65qvc9qs
7fii04e:szyor08zefvhm,c7uymh92utuioymo,oial9f2kf5,969u319,sotmx65qvc9qs,8qfl1j
2fkmzyl2o04g:7fii04e,sotmx65qvc9qs,oial9f2kf5,969u319,szyor08zefvhm,4bp,8qfl1j,iygok9mdheh7b
sotmx65qvc9qs:szyor08zefvhm,ud
4bp:sotmx65qvc9qs,8qfl1j,szyor08zefvhm,7fii04e,iygok9mdheh7b,ud,wqrfjl
8qfl1j:iygok9mdheh7b,sotmx65qvc9qs,ud,wqrfjl,jm74ivwayovib
iygok9mdheh7b:ud,sotmx65qvc9qs,wqrfjl,jm74ivwayovib
ud:wqrfjl
jm74ivwayovib:wqrfjl,ud,xps2zz9trz9z
1s3:jm74ivwayovib,2e7a6,iygok9mdheh7b,ud,wqrfjl,bx065y0,xps2zz9trz9z,dspex431dfysdiazvcmf
2e7a6:bx065y0,ud,wqrfjl,jm74ivwayovib,xps2zz9trz9z,dspex431dfysdiazvcmf,n3vawh54817oe
bx065y0:xps2zz9trz9z,wqrfjl,jm74ivwayovib,dspex431dfysdiazvcmf,n3vawh54817oe,wpre4djhgz
A:s73aw0gvw
I:60
